Prevent unscheduled session drop target from collapsing to zero size in agenda editor. Fixes #3174. Commit ready for merge.  - Legacy-Id: 18998

--- a/ietf/static/ietf/css/ietf.css
+++ b/ietf/static/ietf/css/ietf.css
@@ -1258,6 +1258,7 @@ a.fc-event, .fc-event, .fc-content, .fc-title, .fc-event-container {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  min-height: 5em; /* do not disappear when empty */
 }
 
 .edit-meeting-schedule .scheduling-panel .preferences {
